--- a/ProyectoIntegrador/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegrador/src/app/components/acerca-de/acerca-de.component.html
@@ -1,1 +1,17 @@
-<p>acerca-de works!</p>
+<div class="row">
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <img src="../../../assets/fotoPerfil.jpg" class="img-fluid">
+    </div>
+
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+        <p>Sánchez, Melina Anahí</p>
+        <p>Full Stack Developer Jr</p>
+    </div>
+
+    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-8">
+        <span>
+            <h1>Acerca de mi</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet amet, qui quis perspiciatis porro natus, laboriosam quia modi enim harum veniam quas sed itaque temporibus, mollitia repellendus nihil id? Quam!</p>
+        </span>
+    </div>
+</div>
