--- a/ProyectoIntegrador/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegrador/src/app/components/acerca-de/acerca-de.component.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <img src="../../../assets/fotoPerfil.jpg" class="img-fluid">
+        <img src="../../../assets/fotoPerfil.jpg" class="img-fluid" id="fotodeperfil">
     </div>
 
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-        <p>Sánchez, Melina Anahí</p>
+        <p id="nombre">Sánchez, Melina Anahí</p>
         <p>Full Stack Developer Jr</p>
     </div>
 
