--- a/ProyectoIntegrador/src/app/components/footer/footer.component.html
+++ b/ProyectoIntegrador/src/app/components/footer/footer.component.html
@@ -1,1 +1,6 @@
-<p>footer works!</p>
+<div class="row">
+    <footer>
+        <p>Sánchez, Melina Anahí | © Argentina Programa 2022</p>
+        <p>Paraná, Entre Ríos</p>
+    </footer>
+</div>
