--- a/ProyectoIntegrador/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
+++ b/ProyectoIntegrador/FrontEnd/src/app/components/acerca-de/acerca-de.component.html
@@ -10,8 +10,10 @@
 
     <div class="col-xs-12 col-sm-2 col-md-2 col-lg-8">
         <span>
-            <h1>Acerca de mi</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet amet, qui quis perspiciatis porro natus, laboriosam quia modi enim harum veniam quas sed itaque temporibus, mollitia repellendus nihil id? Quam!</p>
+            <h2>Acerca de mi</h2>
+            <p>Tengo 27 años, soy oriunda de Viale, Entre Ríos pero actualmente vivo en Paraná
+                <br> Juego al voley y al beach voley
+            </p>
         </span>
     </div>
 </div>
